[project]
name = "my-project"
version = "0.1.0"
description = "a demo project manage by poetry on top of conda"
authors = [
    {name = "SeanXLChen",email = "xiaolaiseanchen@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "selenium (>=4.33.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
